--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
   </head>
   <body>
     <main>
-      <img class="avatar" src="assets/images/avatar-jessica.jpeg" alt="This is the main profile image">
-      <h1>Jessica Randall</h1>
-      <span class="location">London, United Kingdom</span>
-      <p class="summary">"Front-end developer and avid reader."</p>
-      <section class="links">
-        <a href="#" target="_blank" rel="noreferrer">Github</a>
-        <a href="#" target="_blank" rel="noreferrer">Frontend Mentor</a>
-        <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
-        <a href="#" target="_blank" rel="noreferrer">Twitter</a>
-        <a href="#" target="_blank" rel="noreferrer">Instagram</a>
-      </section>
+      <div class="container">
+        <img
+          class="avatar"
+          src="assets/images/avatar-jessica.jpeg"
+          alt="This is the main profile image"
+        />
+        <header>
+          <h1>Jessica Randall</h1>
+          <span class="location">London, United Kingdom</span>
+        </header>
+        <p class="summary">"Front-end developer and avid reader."</p>
+        <section class="links">
+          <a href="#" target="_blank" rel="noreferrer">Github</a>
+          <a href="#" target="_blank" rel="noreferrer">Frontend Mentor</a>
+          <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
+          <a href="#" target="_blank" rel="noreferrer">Twitter</a>
+          <a href="#" target="_blank" rel="noreferrer">Instagram</a>
+        </section>
+      </div>
     </main>
   </body>
 </html>
