Update links, ensure SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="This is a social link-sharing profile. You can even personalize it and use it to share all your social profiles!
+    all your social profiles are one click away!"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
@@ -28,11 +33,11 @@
       </header>
       <p class="summary">"Front-end developer and avid reader."</p>
       <section class="links">
-        <a href="#" target="_blank" rel="noreferrer">Github</a>
-        <a href="#" target="_blank" rel="noreferrer">Frontend Mentor</a>
-        <a href="#" target="_blank" rel="noreferrer">LinkedIn</a>
-        <a href="#" target="_blank" rel="noreferrer">Twitter</a>
-        <a href="#" target="_blank" rel="noreferrer">Instagram</a>
+        <a href="https://github.com/" target="_blank" rel="noopener">Github</a>
+        <a href="https://www.frontendmentor.io/" target="_blank" rel="noopener">Frontend Mentor</a>
+        <a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
       </section>
     </main>
   </body>
