--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="stylesheet/style.css" />
+    <link rel="manifest" href="manifest.json">
     <title>Social links profile</title>
   </head>
   <body>
@@ -33,11 +34,11 @@
       </header>
       <p class="summary">"Front-end developer and avid reader."</p>
       <section class="links">
-        <a href="https://github.com/" target="_blank" rel="noopener">Github</a>
-        <a href="https://www.frontendmentor.io/" target="_blank" rel="noopener">Frontend Mentor</a>
-        <a href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+        <a class="github" href="https://github.com/" target="_blank" rel="noopener">Github</a>
+        <a class="frontend" href="https://www.frontendmentor.io/" target="_blank" rel="noopener">Frontend Mentor</a>
+        <a class="linkedin" href="https://www.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="twitter" href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+        <a class="instagram" href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
       </section>
     </main>
   </body>
