--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         class="avatar"
         src="assets/images/avatar-jessica.jpeg"
         alt="This is the main profile image"
+        loading="lazy"
       />
       <header>
         <h1>Jessica Randall</h1>
