Adjust build files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="stylesheet/style.css" />
+    <link rel="stylesheet" href="./stylesheet/style.css" />
     <link rel="manifest" href="manifest.json">
     <title>Social links profile</title>
   </head>
@@ -25,7 +25,7 @@
     <main class="container">
       <img
         class="avatar"
-        src="assets/images/avatar-jessica.jpeg"
+        src="./assets/images/avatar-jessica.jpeg"
         alt="This is the main profile image"
         loading="lazy"
       />
