--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main class="container">
       <img
         class="avatar"
-        src="./assets/images/avatar-jessica.jpeg"
+        src="./assets/images/avatar-jessica.jpeg?as=webp"
         alt="This is the main profile image"
         loading="lazy"
       />
